reasoning_transformations/CRUXEval/Transformations/logs/sample_674.log
STARTING AT 2024-10-19 22:56:39.320319
[START] processing file: sample_674
*Running tests for: sample_674
 
Result: ['tests_pass']
tests_pass sample_674 /home/yang/Benchmark/dataset/cruxeval/code//sample_674.py
Apply all rules on a single file.
Checking transformation add_nested_for_out
*Running tests for: sample_674
 
Result: ['tests_pass']
Checking transformation add_nested_if
*Running tests for: sample_674
 
Result: ['tests_pass']
Checking transformation add_nested_list
*Running tests for: sample_674
 
Result: ['tests_pass']
Checking transformation transform_range_to_recursion
*Running tests for: sample_674
   File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_674", line 15
    break
    ^^^^^
SyntaxError: 'break' outside loop

output_actual, stderr_data: ('', b'  File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_674", line 15\n    break\n    ^^^^^\nSyntaxError: \'break\' outside loop\n')
Result: ['error_or_timeout']
Drop transform_range_to_recursion due to ['error_or_timeout']
Checking transformation add_datetime
*Running tests for: sample_674
 
Result: ['tests_pass']
Checking transformation add_time
*Running tests for: sample_674
 
Result: ['tests_pass']
Checking transformation create_functions
*Running tests for: sample_674
 
Result: ['tests_pass']
Checking transformation add_decorator
*Running tests for: sample_674
 
Result: ['tests_pass']
Checking transformation add_http
*Running tests for: sample_674
 
Result: ['tests_pass']
Checking transformation add_scipy
*Running tests for: sample_674
 
Result: ['tests_pass']
Checking transformation add_base64
*Running tests for: sample_674
 
Result: ['tests_pass']
Checking transformation add_dateutil
*Running tests for: sample_674
 
Result: ['tests_pass']
The file 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_674.py' has been formatted successfully.
Checking reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_674.py
*Running tests for: sample_674
 
Result: ['tests_pass']
{ 'applicable_rules': [ 'change_var_names',
                        'add_nested_for_out',
                        'add_nested_if',
                        'add_try_except_inside_functions',
                        'add_else_to_for',
                        'add_nested_list',
                        'add_datetime',
                        'add_time',
                        'add_crypto',
                        'add_sklearn',
                        'create_functions',
                        'add_decorator',
                        'add_http',
                        'add_scipy',
                        'add_base64',
                        'add_dateutil'],
  'diff_output': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_674.patch',
  'evaluation_tests_dir': '/home/yang/Benchmark/dataset/cruxeval/',
  'exception': None,
  'file_id': 'sample_674',
  'genetic_algorithm': None,
  'original_code': 'def f(text):\n'
                   '    ls = list(text)\n'
                   '    for x in range(len(ls) - 1, -1, -1):\n'
                   '        if len(ls) <= 1:\n'
                   '            break\n'
                   "        if ls[x] not in 'zyxwvutsrqponmlkjihgfedcba':\n"
                   '            ls.pop(ls[x])\n'
                   "    return ''.join(ls)",
  'patch_path': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_674.patch',
  'single_rule': None,
  'source_file': '/home/yang/Benchmark/dataset/cruxeval/code//sample_674.py',
  'target_file': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_674.py',
  'test_results_after': ['tests_pass'],
  'test_results_before': ['tests_pass'],
  'total_time': 5.097232,
  'transformed_code': 'from dateutil.parser import parse\n'
                      'import base64\n'
                      'from scipy.stats import ttest_ind\n'
                      'from http.client import HTTPConnection\n'
                      '\n'
                      'def my_decorator(func):\n'
                      "    HTTPConnection('google.com', port=80)\n"
                      "    base64.b64encode(b'81029123012175726570')\n"
                      '\n'
                      '    def dec_result(*args, **kwargs):\n'
                      '        res = func(*args, **kwargs)\n'
                      '        return res\n'
                      '    return dec_result\n'
                      '\n'
                      '@my_decorator\n'
                      'def newFunc_BinOp0(a, b):\n'
                      "    parse('2024-10-19 22:56:43')\n"
                      '    return a // b\n'
                      'from sklearn.utils import shuffle\n'
                      'from cryptography.fernet import Fernet\n'
                      'import time\n'
                      'import datetime\n'
                      '\n'
                      'def f(text):\n'
                      '    time.sleep(0.03)\n'
                      '    ttest_ind([61, 26, 97], [82, 45, 83])\n'
                      '    datetime.datetime.now()\n'
                      '    shuffle([16, 15, 11])\n'
                      '    Fernet.generate_key()\n'
                      '    try:\n'
                      '        newls_1 = list(text)\n'
                      '        LoopChecker13 = [594][0]\n'
                      '        LoopChecker23 = 593\n'
                      '        ConditionChecker17 = 728\n'
                      '        ConditionChecker27 = 949\n'
                      '        for LoopIndexOut in '
                      'range(newFunc_BinOp0(LoopChecker13, LoopChecker23)):\n'
                      '            for x in range(len(newls_1) - 1, -1, -1):\n'
                      '                if ConditionChecker17 & '
                      'ConditionChecker27:\n'
                      '                    if len(newls_1) <= 1:\n'
                      '                        break\n'
                      '                if newls_1[x] not in '
                      "'zyxwvutsrqponmlkjihgfedcba':\n"
                      '                    newls_1.pop(newls_1[x])\n'
                      '        else:\n'
                      '            pass\n'
                      "        return ''.join(newls_1)\n"
                      '    except:\n'
                      '        pass'}
[END] processing file: sample_674. Total Time: 5.097232
END AT 2024-10-19 22:56:44.419963
